--- a/src/main/resources/org/proview/test/ProfileBookListCardView.fxml
+++ b/src/main/resources/org/proview/test/ProfileBookListCardView.fxml
@@ -2,12 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListView">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="900.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListView">
    <children>
       <HBox prefWidth="200.0">
          <children>
@@ -21,14 +20,7 @@
                         <Insets bottom="10.0" left="20.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="borrowingListView" prefHeight="100.0" prefWidth="400.0">
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets left="20.0" />
-                     </VBox.margin>
-                  </ListView>
+                  <VBox fx:id="borrowingListVBox" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </VBox>
             <VBox prefHeight="100.0" prefWidth="450.0">
@@ -41,14 +33,7 @@
                         <Insets bottom="10.0" left="10.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="favouriteListView" prefHeight="100.0" prefWidth="400.0">
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets left="10.0" right="20.0" />
-                     </VBox.margin>
-                  </ListView>
+                  <VBox fx:id="favouriteListVBox" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </VBox>
          </children>
@@ -65,14 +50,7 @@
                         <Insets bottom="10.0" left="20.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="overdueListView" prefHeight="100.0" prefWidth="400.0">
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets left="20.0" />
-                     </VBox.margin>
-                  </ListView>
+                  <VBox fx:id="overdueListVBox" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </VBox>
             <VBox prefHeight="100.0" prefWidth="450.0">
@@ -85,14 +63,7 @@
                         <Insets bottom="10.0" left="10.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="pastIssuesListView" prefHeight="100.0" prefWidth="400.0">
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets left="10.0" right="20.0" />
-                     </VBox.margin>
-                  </ListView>
+                  <VBox fx:id="pastIssuesListVBox" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </VBox>
          </children>
