--- a/src/main/resources/org/proview/test/GameView.fxml
+++ b/src/main/resources/org/proview/test/GameView.fxml
@@ -14,7 +14,7 @@
     <center>
       <VBox alignment="CENTER" prefHeight="424.0" prefWidth="732.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="resultLabel" text="Abc">
+            <Label fx:id="resultLabel">
                <font>
                   <Font size="28.0" />
                </font>
