--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.HomeView">
+<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.HomeView">
    <top>
       <fx:include source="NavBarView.fxml" />
    </top>
@@ -40,8 +40,8 @@
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <VBox fx:id="topRatedBookListVBox" layoutX="21.0" layoutY="61.0" prefHeight="200.0" prefWidth="401.0" />
-                        <VBox fx:id="trendingBookListVBox" layoutX="472.0" layoutY="61.0" prefHeight="200.0" prefWidth="401.0" />
+                        <VBox fx:id="topRatedBookListVBox" layoutX="21.0" layoutY="61.0" prefHeight="200.0" prefWidth="401.0" spacing="10.0" />
+                        <VBox fx:id="trendingBookListVBox" layoutX="461.0" layoutY="61.0" prefHeight="200.0" prefWidth="401.0" spacing="10.0" />
                      </children>
                   </AnchorPane>
                </children>
