--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -20,7 +19,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <ListView fx:id="recentReviewListView" layoutX="10.0" layoutY="57.0" prefHeight="116.0" prefWidth="350.0" />
+            <VBox fx:id="recentReviewListVBox" layoutX="14.0" layoutY="55.0" spacing="10.0" />
          </children></AnchorPane>
    </left>
    <center>
