--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -43,7 +42,11 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </Button>
-            <ListView fx:id="recentActivityListView" layoutX="9.0" layoutY="258.0" prefHeight="348.0" prefWidth="350.0" />
+            <VBox fx:id="recentActivityListVBox" layoutX="22.0" layoutY="241.0">
+               <padding>
+                  <Insets right="20.0" />
+               </padding>
+            </VBox>
          </children>
       </AnchorPane>
    </left>
