Fully retire ListViews rahhhhhhhhhhhhhhhhhhhhhhhhhhh

--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -33,13 +32,13 @@
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <ListView fx:id="topResultListView" layoutX="61.0" layoutY="81.0" prefHeight="115.0" prefWidth="500.0" />
                         <Label layoutX="605.0" layoutY="28.0" prefHeight="30.0" prefWidth="499.0" text="More results from Google Books">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <ListView fx:id="googleBookListView" layoutX="604.0" layoutY="81.0" prefHeight="115.0" prefWidth="500.0" />
+                        <VBox fx:id="topResultListVBox" layoutX="62.0" layoutY="75.0" prefHeight="200.0" prefWidth="400.0" />
+                        <VBox fx:id="googleBookListVBox" layoutX="605.0" layoutY="75.0" prefHeight="200.0" prefWidth="400.0" />
                      </children>
                   </AnchorPane>
                </children>
