--- a/src/main/resources/org/proview/test/LibraryView.fxml
+++ b/src/main/resources/org/proview/test/LibraryView.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.LibraryView">
+<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.LibraryView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -34,7 +33,7 @@
                                         <Font size="20.0" />
                                     </font>
                                 </Label>
-                                <ListView fx:id="allBooksListView" layoutX="22.0" layoutY="59.0" prefHeight="518.0" prefWidth="497.0" />
+                        <VBox fx:id="allBooksListVBox" layoutX="22.0" layoutY="54.0" prefHeight="200.0" prefWidth="400.0" />
                             </children>
                         </AnchorPane>
                     </children>
