--- a/src/main/resources/org/proview/test/IssueListView.fxml
+++ b/src/main/resources/org/proview/test/IssueListView.fxml
@@ -79,7 +79,7 @@
                                     <TextField fx:id="currentSearchTextField" prefHeight="25.0" prefWidth="1138.0" promptText="Search" />
                                  </children>
                               </HBox>
-                              <TableView fx:id="borrowingTableView" prefHeight="547.0" prefWidth="1305.0" tableMenuButtonVisible="true">
+                              <TableView fx:id="borrowingTableView" prefHeight="547.0" prefWidth="1305.0">
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                  </columnResizePolicy>
@@ -98,7 +98,7 @@
                                     <TextField fx:id="pastSearchTextField" prefHeight="25.0" prefWidth="1135.0" promptText="Search" />
                                  </children>
                               </HBox>
-                              <TableView fx:id="borrowedTableView" prefHeight="547.0" prefWidth="1305.0" tableMenuButtonVisible="true">
+                              <TableView fx:id="borrowedTableView" prefHeight="547.0" prefWidth="1305.0">
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                  </columnResizePolicy>
