tag manage something

--- a/src/main/resources/org/proview/test/AdminManagementNavBarView.fxml
+++ b/src/main/resources/org/proview/test/AdminManagementNavBarView.fxml
@@ -26,5 +26,6 @@
             <Insets />
          </VBox.margin>
       </Button>
+      <Button mnemonicParsing="false" onAction="#onTagsButtonClick" text="Tags" />
    </children>
 </VBox>
