--- a/src/main/resources/org/proview/test/NavBarView.fxml
+++ b/src/main/resources/org/proview/test/NavBarView.fxml
@@ -2,21 +2,21 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Line?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <HBox fx:id="navBarHBox" prefHeight="50.0" prefWidth="1300.0" stylesheets="@styles/NavBarView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
    <children>
       <AnchorPane fx:id="topPane" prefHeight="20.0" prefWidth="1300.0" styleClass="nav-bar">
          <children>
-           <HBox layoutX="6.0" layoutY="10.0" spacing="10.0">
+            <HBox layoutX="6.0" layoutY="10.0" spacing="10.0">
                <children>
-                  <ImageView fitHeight="33.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="33.0" fitWidth="50.0" onMouseClicked="#onHomeButtonClick" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@icons/LogoUET.png" />
                      </image>
@@ -28,13 +28,7 @@
                      <graphic>
                         <FontIcon iconLiteral="fas-home" iconSize="14" />
                      </graphic></Button>
-                  <Separator orientation="VERTICAL" prefHeight="30.0" prefWidth="0.0">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <padding>
-                        <Insets left="-5.0" right="-5.0" />
-                     </padding></Separator>
+                  <Line endY="32.0" stroke="WHITE" />
                   <Button fx:id="libraryButton" onAction="#onLibraryButtonClick" styleClass="nav-button" text="Library">
                      <graphic>
                         <FontIcon iconLiteral="fas-book" iconSize="14" />
