--- a/src/main/resources/org/proview/test/TagManageView.fxml
+++ b/src/main/resources/org/proview/test/TagManageView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.TagManageView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.TagManageView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -77,7 +77,7 @@
                                                 <Label fx:id="tagAddPreviewLabel" text="Label" />
                                              </children>
                                           </StackPane>
-                                          <Button fx:id="confirmAddButton" mnemonicParsing="false" text="Add tag">
+                                          <Button fx:id="confirmAddButton" mnemonicParsing="false" onAction="#onConfirmAddButtonClicked" text="Add tag">
                                              <HBox.margin>
                                                 <Insets />
                                              </HBox.margin>
@@ -95,18 +95,28 @@
                            <content>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label text="Label" />
-                                    <TextField fx:id="tagEditNameLabel1" promptText="Name">
+                                    <Label fx:id="errorEditNameLabel" text="Label" />
+                                    <TextField fx:id="tagEditNameLabel" onKeyTyped="#onTagEditKeyTyped" promptText="Name">
                                        <VBox.margin>
                                           <Insets left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="tagEditBgColorHex1" promptText="Background Color Hex">
+                                    <Label fx:id="errorEditBgLabel" text="Label">
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <TextField fx:id="tagEditBgColorHex" onKeyTyped="#onTagEditKeyTyped" promptText="Background Color Hex">
                                        <VBox.margin>
                                           <Insets left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </TextField>
-                                    <TextField fx:id="tagEditTextColorHex1" promptText="Text Color Hex">
+                                    <Label fx:id="errorEditTextLabel" text="Label">
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <TextField fx:id="tagEditTextColorHex" onKeyTyped="#onTagEditKeyTyped" promptText="Text Color Hex">
                                        <VBox.margin>
                                           <Insets left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
@@ -116,8 +126,12 @@
                                           <Insets top="10.0" />
                                        </VBox.margin>
                                        <children>
-                                          <Label fx:id="tagEditPreviewLabel" text="Label" />
-                                          <Button fx:id="confirmButton" mnemonicParsing="false" text="Edit tag" />
+                                          <StackPane fx:id="tagEditPreviewStackPane">
+                                             <children>
+                                                <Label fx:id="tagEditPreviewLabel" text="Label" />
+                                             </children>
+                                          </StackPane>
+                                          <Button fx:id="confirmEditButton" mnemonicParsing="false" onAction="#onConfirmEditButtonClicked" text="Edit tag" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -128,12 +142,12 @@
                            <content>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <TextField fx:id="tagEditNameLabel3" promptText="Name">
+                                    <TextField fx:id="tagDeleteNameLabel" onKeyTyped="#onTagDeleteKeyTyped" promptText="Name">
                                        <VBox.margin>
                                           <Insets left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </TextField>
-                                    <Button fx:id="confirmButton3" mnemonicParsing="false" text="Delete tag">
+                                    <Button fx:id="confirmDeleteButton" mnemonicParsing="false" onAction="#onConfirmDeleteButtonClicked" text="Delete tag">
                                        <VBox.margin>
                                           <Insets top="10.0" />
                                        </VBox.margin>
