add copies available/borrowing pie chart to dashboard

--- a/src/main/resources/org/proview/test/NavBarView.fxml
+++ b/src/main/resources/org/proview/test/NavBarView.fxml
@@ -41,7 +41,7 @@
                      <graphic>
                         <FontIcon iconLiteral="fas-gamepad" iconSize="14" />
                      </graphic></Button>
-                  <Button styleClass="nav-button" text="Dashboard">
+                  <Button onAction="#onDashboardButtonClicked" styleClass="nav-button" text="Dashboard">
                      <graphic>
                         <FontIcon iconLiteral="far-chart-bar" iconSize="14" />
                      </graphic></Button>
