--- a/src/main/resources/org/proview/test/DashboardView.fxml
+++ b/src/main/resources/org/proview/test/DashboardView.fxml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.DashboardView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
     <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <PieChart fx:id="copiesBorrowedPieChart" title="Percentage of copies being borrowed" />
-         </children></VBox>
+      <ScrollPane BorderPane.alignment="CENTER">
+         <content>
+            <VBox alignment="TOP_CENTER" prefHeight="645.0" prefWidth="1298.0" spacing="10.0">
+               <children>
+                  <Label text="Issues">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <LineChart fx:id="issuesCreatedNumberLineChart" legendVisible="false" title="Number of Issues Created">
+                          <xAxis>
+                            <CategoryAxis label="Week" side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis forceZeroInRange="false" label="Issues" pickOnBounds="false" side="LEFT" tickLabelGap="1.0" upperBound="10.0" />
+                          </yAxis>
+                        </LineChart>
+                     </children>
+                  </HBox>
+                  <Label text="Book">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <PieChart fx:id="copiesBorrowedPieChart" title="Percentage of copies being borrowed" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </center>
 </BorderPane>
